@@ -366,6 +366,8 @@ TerrainRenderer::Generate(const WindowProjection &map_projection,
   const bool is_terrain = true;
   const bool do_shading = is_terrain &&
                           settings.slope_shading != SlopeShading::OFF;
+  const bool do_contour = is_terrain &&
+                          settings.contours != Contours::OFF;
 
   const ColorRamp *const color_ramp = &terrain_colors[settings.ramp][0];
   if (color_ramp != last_color_ramp) {
@@ -381,7 +383,8 @@ TerrainRenderer::Generate(const WindowProjection &map_projection,
 
   raster_renderer.GenerateImage(do_shading, height_scale,
                                 settings.contrast, settings.brightness,
-                                sunazimuth);
+                                sunazimuth,
+				do_contour);
 }
 
 /**
